# ultrasound-lesion-analysis

./: .gitignore  Dockerfile  README.md  TEST FINAL.py  main.py  push_error.txt  pyproject.toml  reqs.txt  requirements_docker.txt  requirements_freeze.txt  test_gui.py
src/: main.py
src/core/: analyzer.py  firebase_db.py  utils.py
src/gui/: auth_view.py  dashboard_view.py  main_window.py
web/backend/: analyzer.py  api.py  heatmap.py  launcher.py  pdf_report.py
web/frontend/: build_output.txt  build_output_utf8.txt  package-lock.json  package.json  vite.config.js
web/frontend/electron/: main.cjs
web/frontend/src/: App.jsx  index.css
web/frontend/src/components/: AboutPanel.jsx  AnalysisResult.jsx  ImageViewer.jsx  PatientIntake.jsx  SettingsPanel.jsx  SplashScreen.jsx
web/frontend/src/components/ui/: AnimatedBeam.jsx  BorderBeam.jsx  GridPattern.jsx
web/frontend/src/lib/: utils.js
