[project]
name = "breast-cancer-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fastapi>=0.135.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pywebview>=6.1",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv]
package = false
